--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "axios": "latest",
+    "next": "14.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@coinbase/minikit-js": "latest",
-    "axios": "1.6.7"
+    "react-dom": "18.2.0"
   }
-  
+}
